# url-shortener

./: .gitignore  LICENSE  README.md  pyproject.toml
infrastructure/sam/: samconfig.toml  template.yaml
src/: main.py  paths.csv  requirements.txt
url_shortener/: main.py
